--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Xanadu Tennis · Recommender (Smart v2.5)</title>
+  <title>Xanadu Tennis · Recommender (Smart v2.6)</title>
   <style>
     :root{
       --bg:#ffffff; --text:#1f2937; --muted:#6b7280; --card:#ffffff; --line:#e5e7eb;
@@ -15,7 +15,7 @@
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial}
     .wrap{min-height:100vh;display:flex;align-items:flex-start;justify-content:center}
-    .stage{width:100%;max-width:980px;margin:calc(38vh - 220px) auto 32px; /* 黄金分割靠上 */ padding:0 16px}
+    .stage{width:100%;max-width:980px;margin:72px auto 32px;padding:0 16px}
     .card{background:var(--card);border:1px solid var(--line);border-radius:16px;padding:18px;box-shadow:0 6px 20px #0000000d}
     h1{margin:0 0 12px;font-size:22px}
     .q{font-weight:700;margin:8px 0 6px}
@@ -35,7 +35,7 @@
     .pill{display:inline-block;padding:4px 8px;border-radius:999px;border:1px solid var(--line);background:var(--soft);color:var(--muted);font-size:12px;margin-right:6px}
     .recgrid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:12px}
     .panel{background:var(--soft);border:1px solid var(--line);border-radius:14px;padding:12px}
-    .stickybar{position:sticky;top:0;background:rgba(255,255,255,0.92);backdrop-filter:saturate(1.2) blur(6px);border-bottom:1px solid var(--line);padding:8px 16px;display:flex;justify-content:space-between;align-items:center}
+    .stickybar{position:sticky;top:0;z-index:10;background:rgba(255,255,255,0.98);backdrop-filter:saturate(1.2) blur(6px);border-bottom:1px solid var(--line);padding:10px 16px;display:flex;justify-content:space-between;align-items:center}
     .title{font-weight:700}
     input,textarea{width:100%;padding:10px 12px;border:1px solid var(--line);border-radius:10px;background:#fff}
     textarea{min-height:88px}
