--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Xanadu Tennis • Recommender (Clean v3.5)</title>
+<title>Toronto Xanadu Tennis • Recommender (Clean v3.5)</title>
 <style>
   body{margin:0;background:#ffffff;color:#1f2937;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial}
   .topbar{position:sticky;top:0;z-index:10;background:#fff;border-bottom:1px solid #e5e7eb;
