--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <script>
 // ===== 文案
 var STR = {
-  zh:{ title:'课程推荐（智能分档）', lang:'请选择语言', zh:'中文', en:'English',
+  zh:{ title:'智能课程推荐', lang:'请选择语言', zh:'中文', en:'English',
        audience:'请选择报名对象', adult:'成人 (14+)', child:'儿童 U14',
        a_level:'请选择成人当前水平', zero:'零基础', basic:'有一定基础', inter:'能对打/发球', adv:'能比赛',
        k_mode:'请选择儿童课程模式', flex:'短期 Flex', longterm:'长期 固定周课',
@@ -70,7 +70,7 @@ var STR = {
        submit:'提交', submitted:'已提交！我们会在 24 小时内联系您完成报课。',
        restart:'重新开始'
   },
-  en:{ title:'Course Recommender (Smart)', lang:'Choose your language', zh:'中文', en:'English',
+  en:{ title:'Smart Course Recommender', lang:'Choose your language', zh:'中文', en:'English',
        audience:'Who is this for?', adult:'Adult (14+)', child:'Child (U14)',
        a_level:'Select your current level', zero:'True beginner', basic:'Some basics', inter:'Can rally/serve', adv:'Match-ready',
        k_mode:'Select course mode', flex:'Short-term Flex', longterm:'Long-term weekly',
