--- a/admin.html
+++ b/admin.html
@@ -11,15 +11,18 @@
   h1{margin:0 0 10px}
   input{padding:10px 12px;border:1px solid #e5e7eb;border-radius:10px}
   .btn{padding:10px 14px;border:none;border-radius:10px;background:#0f766e;color:#fff;cursor:pointer}
+  .btn.red{background:#dc2626}
   .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
   table{width:100%;border-collapse:collapse}
   th,td{border:1px solid #e5e7eb;padding:8px;text-align:left;vertical-align:top}
   th{background:#f3f4f6}
   .muted{color:#6b7280}
+  .rowhead{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
 </style>
 </head>
 <body>
 <div class="wrap">
+  <!-- 登录卡片 -->
   <div id="login" class="card">
     <h1>管理员登录</h1>
     <div style="display:flex;gap:8px;flex-wrap:wrap">
@@ -30,10 +33,13 @@
     <div id="msg" class="muted" style="margin-top:8px"></div>
   </div>
 
+  <!-- 列表面板 -->
   <div id="panel" style="display:none">
     <div class="card header">
       <h1>报课记录</h1>
-      <button class="btn" onclick="load()">刷新</button>
+      <div style="display:flex;gap:8px">
+        <button class="btn" onclick="load()">刷新</button>
+      </div>
     </div>
     <div id="list"></div>
   </div>
@@ -41,6 +47,8 @@
 
 <script>
 const STORAGE_KEY='xanadu_submissions';
+
+// 登录
 function login(){
   const u=document.getElementById('u').value.trim();
   const p=document.getElementById('p').value.trim();
@@ -53,36 +61,68 @@ function login(){
   }
 }
 
+// 载入并渲染
 function load(){
   const list=JSON.parse(localStorage.getItem(STORAGE_KEY)||'[]');
-  // 建索引用于疑重判断
-  const seen=new Map(); // key: name|wechat|email -> count
+
+  // 疑重判断：同名+（同微信 或 同邮箱）
+  const seen=new Map();
   list.forEach(r=>{
-    const key1=`${r.name}|${r.wechat||''}`;
-    const key2=`${r.name}|${r.email||''}`;
-    seen.set(key1,(seen.get(key1)||0)+1);
-    seen.set(key2,(seen.get(key2)||0)+1);
+    const k1=`${r.name}|${r.wechat||''}`;
+    const k2=`${r.name}|${r.email||''}`;
+    seen.set(k1,(seen.get(k1)||0)+1);
+    seen.set(k2,(seen.get(k2)||0)+1);
   });
 
-  const html=list.slice().reverse().map(r=>{
+  // 最新在前
+  const rows=list.slice().reverse().map(r=>{
     const suspected = (seen.get(`${r.name}|${r.wechat||''}`)>1) || (seen.get(`${r.name}|${r.email||''}`)>1);
-    const ticket = r.ticket + (suspected ? '（疑重）' : '');
+    const ticketDisp = r.ticket + (suspected ? '（疑重）' : '');
+    const ts = new Date(r.ts).toLocaleString();
+
     return `
     <div class="card">
+      <div class="rowhead">
+        <div><b>咨询号码：</b>${ticketDisp}</div>
+        <button class="btn red" onclick="confirmDelete('${r.ticket}')">删除</button>
+      </div>
       <table>
-        <tr><th>咨询号码</th><td>${ticket}</td></tr>
-        <tr><th>客户姓名</th><td>${r.name||''}</td></tr>
-        <tr><th>微信号</th><td>${r.wechat||'n/a'}</td></tr>
-        <tr><th>邮箱</th><td>${r.email||''}</td></tr>
-        <tr><th>最佳匹配推荐</th><td>${r.best||''}</td></tr>
-        <tr><th>备注</th><td>${r.notes||''}</td></tr>
-        <tr><th>报课详细选项</th><td>${r.detail||''}</td></tr>
-        <tr><th>时间</th><td class="muted">${new Date(r.ts).toLocaleString()}</td></tr>
+        <tr><th>客户姓名</th><td>${escapeHTML(r.name||'')}</td></tr>
+        <tr><th>微信号</th><td>${escapeHTML(r.wechat||'n/a')}</td></tr>
+        <tr><th>邮箱</th><td>${escapeHTML(r.email||'')}</td></tr>
+        <tr><th>最佳匹配推荐</th><td>${escapeHTML(r.best||'')}</td></tr>
+        <tr><th>备注</th><td>${escapeHTML(r.notes||'')}</td></tr>
+        <tr><th>报课详细选项</th><td>${escapeHTML(r.detail||'')}</td></tr>
+        <tr><th>时间</th><td class="muted">${ts}</td></tr>
       </table>
     </div>`;
   }).join('');
 
-  document.getElementById('list').innerHTML = html || '<div class="card">暂无记录</div>';
+  document.getElementById('list').innerHTML = rows || '<div class="card">暂无记录</div>';
+}
+
+// 删除确认
+function confirmDelete(ticket){
+  const phrase = prompt('请再次确认是否删除该条记录？\n输入【确认删除】以继续，或点取消退出。');
+  if(phrase===null) return; // 取消
+  if(phrase.trim()!=='确认删除'){
+    alert('口令不正确，已取消删除。');
+    return;
+  }
+  deleteByTicket(ticket);
+}
+
+// 真正删除
+function deleteByTicket(ticket){
+  const list=JSON.parse(localStorage.getItem(STORAGE_KEY)||'[]');
+  const next=list.filter(r=>r.ticket!==ticket);
+  localStorage.setItem(STORAGE_KEY', JSON.stringify(next));
+  load();
+}
+
+// 简单转义，避免表格里出现特殊字符影响渲染
+function escapeHTML(s){
+  return String(s).replace(/[&<>"]/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c]));
 }
 </script>
 </body>
