--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@ const K_LT={
   '1v3':{'1pw':{'25':['$3000','(120/hr)'],'50':['$5850','(117/hr)']},'2pw':{'25':['$5750','(115/hr)'],'50':['$11000','(110/hr)']},'3pw':{'25':['$7875','(105/hr)'],'50':['$15000','(100/hr)']}},
   '1v4-6':{'1pw':{'25':['$3650','(146/hr)'],'50':['$7150','(143/hr)']},'2pw':{'25':['$7050','(141/hr)'],'50':['$13650','(136.5/hr)']},'3pw':{'25':['$9750','(130/hr)'],'50':['$18750','(125/hr)']}}
 };
+// ===== 后端 API
+const API_URL = 'https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbyjdf7q5rN9YfqL8LNURZg3Ep-17aPUoPlYQAFLngvWrH35JI2ETBJLBc3B1klxgGlb/exec';
+
+async function apiCreate(record){
+  // 期望 Apps Script 接口：POST {action:'create', data:{...}} -> {ok:true, ticket:'XT00001'}
+  const res = await fetch(API_URL, {
+    method: 'POST',
+    headers: {'Content-Type':'application/json'},
+    body: JSON.stringify({ action:'create', data: record })
+  });
+  return res.json();
+}
 
 // 状态
 let S={lang:null,history:[],audience:null,a_level:null,group:null,join:null,coach:null,sched:null,freq:null,k_mode:null,k_group:null,k_join:null,k_coach:null,k_sched:null,k_freq:null,k_term:null,submitted:false,lastTicket:null};
@@ -130,11 +142,6 @@ function buildKids(){
   }
 }
 
-// 本地“后端”
-const STORAGE_KEY='xanadu_submissions';
-const COUNTER_KEY='xanadu_counter';
-function nextTicket(){ const n=Number(localStorage.getItem(COUNTER_KEY)||0)+1; localStorage.setItem(COUNTER_KEY,String(n)); return 'XT'+String(n).padStart(5,'0'); }
-function saveRecord(rec){ const list=JSON.parse(localStorage.getItem(STORAGE_KEY)||'[]'); list.push(rec); localStorage.setItem(STORAGE_KEY,JSON.stringify(list)); }
 
 // 选项摘要（只列选项）
 function chosenSummary(){
@@ -179,27 +186,53 @@ function contactBlock(){
       <button class="btn alt" onclick="submitLead()">${t('submit')}</button>
     </div>`;
 }
-function submitLead(){
+async function submitLead(){
   const name=document.getElementById('c_name').value.trim();
   const phone=document.getElementById('c_phone').value.trim();
   const email=document.getElementById('c_email').value.trim();
   const we=document.getElementById('c_wechat');
-  if(!name||!phone||!email){ alert(S.lang==='zh'?'请填写姓名/电话/邮箱':'Please fill name/phone/email'); return; }
-  if(S.lang==='zh' && we && !we.value.trim()){ alert('请填写微信号'); return; }
+  if(!name||!phone||!email){
+    alert(S.lang==='zh'?'请填写姓名/电话/邮箱':'Please fill name/phone/email');
+    return;
+  }
+  if(S.lang==='zh' && we && !we.value.trim()){
+    alert('请填写微信号'); return;
+  }
 
+  // 计算最佳匹配（沿用你原来的逻辑）
   const rec=(S.audience==='adult')?buildAdult():buildKids();
   const main=localizeRows([rec.main])[0];
   const best=`${rec.title} · ${main[0]} · ${main[1]}${main[2]?(' · '+main[2]):''}`;
 
-  const ticket=nextTicket();
-  saveRecord({
-    ticket, name,
+  // 选项摘要（沿用你原有 chosenSummary）
+  const detail = chosenSummary();
+
+  // 组装提交数据（ticket 让后端统一生成，更稳）
+  const payload = {
+    name,
     wechat:(S.lang==='zh'?(we?we.value.trim():''):'n/a'),
-    email, best,
+    email,
+    best,
     notes:(document.getElementById('c_notes').value||'').trim(),
-    detail:chosenSummary(), ts:new Date().toISOString()
-  });
-  S.lastTicket=ticket; S.submitted=true; render();
+    detail,
+    ts:new Date().toISOString(),
+    // 也可带上 phone，Sheet 里要就加一列；若不要可删
+    phone
+  };
+
+  try{
+    const j = await apiCreate(payload);
+    if(!j.ok){
+      alert(S.lang==='zh'?'提交失败，请稍后再试':'Submit failed, please try again.');
+      return;
+    }
+    S.lastTicket = j.ticket;   // 用后端生成的咨询号
+    S.submitted = true;
+    render();
+  }catch(err){
+    console.error(err);
+    alert(S.lang==='zh'?'网络异常，请稍后再试':'Network error, please try again later.');
+  }
 }
 
 // 选项按钮
