--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ const K_LT={
   '1v4-6':{'1pw':{'25':['$3650','(146/hr)'],'50':['$7150','(143/hr)']},'2pw':{'25':['$7050','(141/hr)'],'50':['$13650','(136.5/hr)']},'3pw':{'25':['$9750','(130/hr)'],'50':['$18750','(125/hr)']}}
 };
 // ===== 后端 API
-const API_URL = 'https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbyjdf7q5rN9YfqL8LNURZg3Ep-17aPUoPlYQAFLngvWrH35JI2ETBJLBc3B1klxgGlb/exec';
+const API_URL = 'https://script.google.com/macros/s/AKfycbw4fkM2ybBtJ53KrJ0hnrc7qm0-l4Curpe1F7pEIFBtdRzraYJN4s8AhypuC3oP9PEI/exec';
 
 async function apiCreate(record){
   // 期望 Apps Script 接口：POST {action:'create', data:{...}} -> {ok:true, ticket:'XT00001'}
