--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,7 @@
 </div>
 
 <script>
-const API_URL = 'https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbyjdf7q5rN9YfqL8LNURZg3Ep-17aPUoPlYQAFLngvWrH35JI2ETBJLBc3B1klxgGlb/exec';
+const API_URL = 'https://script.google.com/macros/s/AKfycbw4fkM2ybBtJ53KrJ0hnrc7qm0-l4Curpe1F7pEIFBtdRzraYJN4s8AhypuC3oP9PEI/exec';
 
 async function apiList(){
   // 期望 Apps Script GET 返回：{ok:true, list:[{ticket,name,wechat,email,best,notes,detail,ts}]}
