--- a/index.html
+++ b/index.html
@@ -50,12 +50,9 @@
   </div>
 
 <script>
-
-// ===== 后端 API（把 URL 换成你的 /exec）
+/* ========= 后端 API（把 URL 换成你的 /exec） ========= */
 const API_URL = 'https://script.google.com/macros/s/AKfycbw4fkM2ybBtJ53KrJ0hnrc7qm0-l4Curpe1F7pEIFBtdRzraYJN4s8AhypuC3oP9PEI/exec';
-
 async function apiCreate(record){
-  // POST { action:'create', data:{...} } -> { ok:true, ticket:'XT00001' }
   const res = await fetch(API_URL, {
     method: 'POST',
     headers: { 'Content-Type':'application/json' },
@@ -64,14 +61,14 @@ async function apiCreate(record){
   return res.json();
 }
 
-// 文案
+/* ========= 文案 ========= */
 const STR={
   zh:{title:'智能课程推荐',lang:'请选择语言',zh:'中文',en:'English',audience:'请选择报名对象',adult:'成人 (14+)',child:'儿童 U14',a_level:'请选择成人当前水平',zero:'零基础',basic:'有一定基础',inter:'能对打/发球',adv:'能比赛',k_mode:'请选择儿童课程模式',flex:'短期 Flex',longterm:'长期 固定周课',group:'更偏好的上课人数？',g1:'1v1',g2:'1v2',g3:'1v3',g4:'1v4',g46:'1v4–6',join:'是否可自带队友或接受拼班？',j_bring:'我能带1–3位朋友',j_join:'愿意拼班（由我们匹配）',j_none:'都不方便',coach:'您偏好男教练还是女教练？',cm:'男教练',cf:'女教练',ca:'都可以',sched:'时间偏好',wd:'工作日白天',we:'工作日晚间',wk:'周末',flex2:'都可以',freq:'每周计划上课频次',f1:'1×/周',f2:'2×/周',f3:'3×+/周',term:'请选择课程周期',term25:'半年(25周)',term50:'一年(50周)',rec:'为您生成的推荐',main:'最匹配',alt:'其他可选',price_all:'完整价目表',adult_zero:'成人 · 零基础（红球场）',adult_basic:'成人 · 进阶专项（半场）',adult_full:'成人 · 定制训练（全场）',kid_flex:'U14 · 短期 Flex',kid_lt:'U14 · 长期固定（半年/一年）',contact:'请留下联系方式，我们将在 24 小时内联系您完成报课',name:'姓名',phone:'手机号',email:'邮箱',wechat:'微信号(必填)',notes:'备注(可填年龄/可用时间)',submit:'提交',submitted:'提交成功！已生成咨询号码：',restart:'重新开始'},
   en:{title:'Smart Course Recommender',lang:'Choose your language',zh:'中文',en:'English',audience:'Who is this for?',adult:'Adult (14+)',child:'Child (U14)',a_level:'Select your current level',zero:'True beginner',basic:'Some basics',inter:'Can rally/serve',adv:'Match-ready',k_mode:'Select course mode',flex:'Short-term Flex',longterm:'Long-term weekly',group:'Preferred class size?',g1:'1v1',g2:'1v2',g3:'1v3',g4:'1v4',g46:'1v4–6',join:'Can you bring friends or join matching?',j_bring:'I can bring 1–3 friends',j_join:'Happy to be matched',j_none:'Prefer not',coach:'Coach gender preference?',cm:'Male',cf:'Female',ca:'No preference',sched:'Schedule preference',wd:'Weekday daytime',we:'Weekday evening',wk:'Weekend',flex2:'Flexible',freq:'Sessions per week',f1:'1×/week',f2:'2×/week',f3:'3×+/week',term:'Select course term',term25:'Half-year (25 weeks)',term50:'Full-year (50 weeks)',rec:'Your recommendations',main:'Best match',alt:'Other options',price_all:'Full Price List',adult_zero:'Adults · True Beginner (Red court)',adult_basic:'Adults · Skill Focus (Half court)',adult_full:'Adults · Custom (Full court)',kid_flex:'U14 · Short-term Flex',kid_lt:'U14 · Long-term (Half/Full year)',contact:'Leave your contact. We will reach out within 24 hours to complete your registration.',name:'Full Name',phone:'Phone',email:'Email',wechat:'WeChat (required)',notes:'Notes (availability, age, etc.)',submit:'Submit',submitted:'Success! Your Ticket No: ',restart:'Restart'}
 };
 const t=k=>STR[S.lang||'zh'][k];
 
-// 价目（成人删95折；儿童长期补3pw）
+/* ========= 价目（成人删95折；儿童长期补3pw） ========= */
 const PRICE={
   adult_zero:[["1v1 10hr","$800/人","试课$100"],["1v1 20hr","$1550/人",""],["1v2 10hr","$1000/共","试课$140"],["1v2 20hr","$1900/共",""],["1v3 15hr","$1500/共","试课$240"],["1v4 15hr","$1800/共","试课$280"]],
   adult_basic:[["1v1 10hr","$900/人","试课$110"],["1v1 20hr","$1710/人",""],["1v2 10hr","$1250/共","试课$150"],["1v2 20hr","$2375/共",""],["1v3 15hr","$1500/共","试课$240"],["1v4 15hr","$1800/共","试课$280"]],
@@ -85,28 +82,14 @@ const K_LT={
   '1v4-6':{'1pw':{'25':['$3650','(146/hr)'],'50':['$7150','(143/hr)']},'2pw':{'25':['$7050','(141/hr)'],'50':['$13650','(136.5/hr)']},'3pw':{'25':['$9750','(130/hr)'],'50':['$18750','(125/hr)']}}
 };
 
-  
-// ===== 后端 API
-const API_URL = 'https://script.google.com/macros/s/AKfycbw4fkM2ybBtJ53KrJ0hnrc7qm0-l4Curpe1F7pEIFBtdRzraYJN4s8AhypuC3oP9PEI/exec';
-
-async function apiCreate(record){
-  // 期望 Apps Script 接口：POST {action:'create', data:{...}} -> {ok:true, ticket:'XT00001'}
-  const res = await fetch(API_URL, {
-    method: 'POST',
-    headers: {'Content-Type':'application/json'},
-    body: JSON.stringify({ action:'create', data: record })
-  });
-  return res.json();
-}
-
-// 状态
+/* ========= 状态 ========= */
 let S={lang:null,history:[],audience:null,a_level:null,group:null,join:null,coach:null,sched:null,freq:null,k_mode:null,k_group:null,k_join:null,k_coach:null,k_sched:null,k_freq:null,k_term:null,submitted:false,lastTicket:null};
 const app=document.getElementById('app');
 const pushStep=()=>S.history.push(JSON.stringify(S));
 function goBack(){ if(!S.history.length) return; const prev=S.history.pop(); const keep=S.history.slice(); S=JSON.parse(prev); S.history=keep; render(); }
 function restartAll(){ S={lang:null,history:[],audience:null,a_level:null,group:null,join:null,coach:null,sched:null,freq:null,k_mode:null,k_group:null,k_join:null,k_coach:null,k_sched:null,k_freq:null,k_term:null,submitted:false,lastTicket:null}; render(); }
 
-// 工具
+/* ========= 工具 ========= */
 const zh2enCell=x=>x.replace('/人',' per person').replace('/共',' per group').replace('试课','$ Trial ').replace('小时',' hours');
 function localizeRows(rows){ if((S.lang||'zh')==='zh') return rows; return rows.map(r=>[zh2enCell(r[0]),zh2enCell(r[1]),zh2enCell(r[2]||'')]); }
 function table(rows){
@@ -130,7 +113,7 @@ function tableKLT(){
 function findRow(rows,group,hours){ return rows.find(r=>r[0].startsWith(`${group} ${hours}hr`))||null; }
 function chooseHours(group){ return (group==='1v1'||group==='1v2')?((S.freq==='f2'||S.freq==='f3')?20:10):15; }
 
-// 推荐
+/* ========= 推荐 ========= */
 function tierFromAdultLevel(){ if(S.a_level==='zero') return 'zero'; if(S.a_level==='basic') return 'basic'; return 'full'; }
 const priceTableByTier=tier=>tier==='zero'?PRICE.adult_zero:(tier==='basic'?PRICE.adult_basic:PRICE.adult_full);
 function buildAdult(){
@@ -158,8 +141,7 @@ function buildKids(){
   }
 }
 
-
-// 选项摘要（只列选项）
+/* ========= 选项摘要 ========= */
 function chosenSummary(){
   const a=[];
   a.push(S.lang==='zh'?'中文':'English');
@@ -184,7 +166,7 @@ function chosenSummary(){
   return a.join(', ');
 }
 
-// 联系/提交
+/* ========= 联系/提交 ========= */
 function contactBlock(){
   const zh=(S.lang==='zh');
   return `
@@ -213,19 +195,14 @@ async function submitLead(){
     return;
   }
   if(S.lang==='zh' && we && !we.value.trim()){
-    alert('请填写微信号');
-    return;
+    alert('请填写微信号'); return;
   }
 
-  // 计算最佳匹配（沿用你现有 buildAdult/buildKids）
   const rec  = (S.audience==='adult') ? buildAdult() : buildKids();
   const main = localizeRows([rec.main])[0];
   const best = `${rec.title} · ${main[0]} · ${main[1]}${main[2] ? (' · '+main[2]) : ''}`;
+  const detail = chosenSummary();
 
-  // 选项摘要（你项目里已有的 chosenSummary，如果没有，可先用空字符串代替）
-  const detail = (typeof chosenSummary === 'function') ? chosenSummary() : '';
-
-  // 发送到后端（ticket 由后端生成）
   const payload = {
     name,
     wechat: (S.lang==='zh' ? (we ? we.value.trim() : '') : 'n/a'),
@@ -239,11 +216,8 @@ async function submitLead(){
 
   try{
     const j = await apiCreate(payload);
-    if(!j.ok){
-      alert(S.lang==='zh' ? '提交失败，请稍后再试' : 'Submit failed, please try again.');
-      return;
-    }
-    S.lastTicket = j.ticket;   // 使用后端返回的咨询号
+    if(!j.ok){ alert(S.lang==='zh'?'提交失败，请稍后再试':'Submit failed, please try again.'); return; }
+    S.lastTicket = j.ticket;
     S.submitted  = true;
     render();
   }catch(err){
@@ -252,14 +226,12 @@ async function submitLead(){
   }
 }
 
-
-
-// 选项按钮
+/* ========= 选项按钮 ========= */
 function opt(label,call){
   return `<div class="opt" onclick="${call}; this.classList.add('selected')">${label}</div>`;
 }
 
-// 渲染
+/* ========= 渲染 ========= */
 function render(){
   let html='';
 
@@ -324,7 +296,6 @@ function render(){
         <div class="footer"><button class="btn ghost" onclick="goBack()">◀︎ ${(S.lang==='en'?'Back':'返回')}</button><button class="btn ghost" onclick="restartAll()">${t('restart')}</button></div>`;
       app.innerHTML=html; return;
     }
-    // 成人推荐
     const recA=buildAdult(), mainA=localizeRows([recA.main])[0];
     html+=`<h1>${t('title')}</h1><div class="q">${t('rec')}</div><div class="recgrid">
       <div class="card mainrec"><div class="muted">${t('main')}</div><div class="q">${recA.title} · ${mainA[0]}</div><div>${mainA[1]}</div><div class="muted">${mainA[2]||''}</div></div>
@@ -382,7 +353,6 @@ function render(){
       <div class="footer"><button class="btn ghost" onclick="goBack()">◀︎ ${(S.lang==='en'?'Back':'返回')}</button><button class="btn ghost" onclick="restartAll()">${t('restart')}</button></div>`;
     app.innerHTML=html; return;
   }
-  // 儿童推荐
   const recK=buildKids(), mainK=localizeRows([recK.main])[0];
   html+=`<h1>${t('title')}</h1><div class="q">${t('rec')}</div><div class="recgrid">
     <div class="card mainrec"><div class="muted">${t('main')}</div><div class="q">${recK.title} · ${mainK[0]}</div><div>${mainK[1]}</div><div class="muted">${mainK[2]||''}</div></div>
@@ -396,7 +366,7 @@ function render(){
   app.innerHTML=html; return;
 }
 
-// 初始渲染
+/* ========= 初始渲染 ========= */
 render();
 </script>
 </body>
